--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <log4j2.version>2.17.2</log4j2.version>
         <jackson.version>2.13.2</jackson.version>
+        <jackson-databind.version>2.13.2.2</jackson-databind.version>
         <lombok.version>1.18.24</lombok.version>
+        <junit.version>5.8.2</junit.version>
     </properties>
 
     <dependencies>
@@ -40,7 +42,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.2.2</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
         <dependency>
@@ -48,6 +50,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
