fix BFS by cost

--- a/src/test/resources/log4j2.yml
+++ b/src/test/resources/log4j2.yml
@@ -9,7 +9,7 @@ Configuration:
 
   Loggers:
     Root:
-      level: warn
+      level: info
       AppenderRef:
         ref: Console_Appender
     logger:
