--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <prerequisites>
+        <maven>3.9.5</maven>
+    </prerequisites>
+
     <groupId>logan</groupId>
     <artifactId>fire-game</artifactId>
     <version>1.0.0</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <log4j2.version>2.17.2</log4j2.version>
-        <jackson.version>2.13.3</jackson.version>
-        <jackson-databind.version>2.13.3</jackson-databind.version>
-        <lombok.version>1.18.24</lombok.version>
-        <junit.version>5.8.2</junit.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <log4j2.version>2.22.1</log4j2.version>
+        <jackson.version>2.16.1</jackson.version>
+        <jackson-databind.version>2.16.1</jackson-databind.version>
+        <lombok.version>1.18.30</lombok.version>
+        <junit.version>5.10.1</junit.version>
     </properties>
 
     <dependencies>
